# pebble-cms

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
docs/: analytics.md  deployment.md  guide.md  issues.txt  performance.md  usage.md
src/: lib.rs  main.rs  tests.rs
src/cli/: backup.rs  build.rs  config.rs  deploy.rs  doctor.rs  export.rs  import.rs  import_ghost.rs  import_wordpress.rs  init.rs  migrate.rs  mod.rs  registry.rs  rerender.rs  serve.rs  user.rs
src/config/: mod.rs
src/db/: mod.rs
src/db/migrations/: 001_initial.sql  001_rollback.sql  002_fts.sql  002_rollback.sql  003_media_optimization.sql  003_rollback.sql  004_rollback.sql  004_scheduled_publishing.sql  005_analytics.sql  005_rollback.sql  006_content_versions.sql  006_rollback.sql  007_audit_log.sql  007_rollback.sql  008_preview_tokens.sql  008_rollback.sql  009_content_series.sql  009_rollback.sql  010_api_and_webhooks.sql  010_rollback.sql
src/global/: config.rs  home.rs  mod.rs  registry.rs
src/models/: api_token.rs  content.rs  media.rs  mod.rs  series.rs  tag.rs  user.rs  webhook.rs
src/services/: analytics.rs  api_token.rs  audit.rs  auth.rs  content.rs  database.rs  html_to_markdown.rs  image.rs  markdown.rs  media.rs  mod.rs  preview.rs  search.rs  series.rs  settings.rs  slug.rs  tags.rs  versions.rs  webhook.rs
src/templates/: mod.rs
src/web/: error.rs  extractors.rs  mod.rs  routes.rs  security.rs  state.rs
src/web/handlers/: admin.rs  api.rs  auth.rs  htmx.rs  mod.rs  public.rs
templates/: base.html
templates/admin/: base.html  dashboard.html  login.html  setup.html
templates/admin/analytics/: index.html
templates/admin/audit/: index.html  view.html
templates/admin/database/: index.html
templates/admin/media/: index.html
templates/admin/pages/: form.html  index.html
templates/admin/posts/: form.html  index.html
templates/admin/series/: form.html  index.html
templates/admin/settings/: index.html
templates/admin/snippets/: form.html  index.html
templates/admin/tags/: index.html
templates/admin/tokens/: index.html
templates/admin/users/: index.html
templates/admin/versions/: diff.html  history.html  view.html
templates/admin/webhooks/: deliveries.html  index.html
templates/css/: _components.css  _layout.css  _reset.css  _themes.css  _typography.css  _variables.css  admin.css  bundle-admin.css  bundle.css  public.css
templates/htmx/: analytics_content.html  analytics_realtime.html  flash.html
templates/js/: admin.js  theme.js
templates/public/: 404.html  500.html  index.html  page.html  post.html  posts.html  search.html  series.html  tag.html  tags.html
tests/: integration_tests.rs
