[package]
name = "pebble-cms"
version = "1.0.0-rc1"
edition = "2021"
rust-version = "1.75"
description = "A lightweight, single-binary CMS powered by SQLite — 15 themes, REST API, WCAG 2.1 AA, static export"
license = "MIT"
repository = "https://github.com/ooyeku/pebble-cms"
homepage = "https://github.com/ooyeku/pebble-cms"
readme = "README.md"
keywords = ["cms", "blog", "sqlite", "markdown", "htmx"]
categories = ["web-programming", "command-line-utilities"]

[[bin]]
name = "pebble"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header", "cookie"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "compression-gzip", "cors"] }
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# Templating
tera = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"

# Markdown
pulldown-cmark = { version = "0.12", default-features = false, features = ["simd", "html"] }
syntect = "5"
ammonia = "4"

# Authentication
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
rpassword = "7"

# Cookie time
time = "0.3"

# Utilities
thiserror = "2"
anyhow = "1"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
slug = "0.1"
uuid = { version = "1", features = ["v4"] }
mime_guess = "2"
regex = "1"

image = "0.25"
zip = "2"
infer = "0.16"

# Embed assets
rust-embed = "8"
sha2 = "0.10.9"
hex = "0.4.3"
url = "2.5.8"

# Global config
dirs = "5"
whoami = "1"

# API & Integrations
reqwest = { version = "0.12", features = ["json"], default-features = false, optional = true }
quick-xml = { version = "0.37", features = ["serialize"] }
hmac = "0.12"

[features]
default = ["webhooks"]
webhooks = ["reqwest"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
